--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: 钟健材
+title: 苏大晟
 profile_img: /assets/img/avator.png
 icon_img: /assets/img/icon.jpg
 
-name: "钟健材"
+name: "苏大晟"
 job: "Java 研发⼯程师"
 
 baseurl: /resume/
