--- a/_data/Information.yml
+++ b/_data/Information.yml
@@ -4,8 +4,8 @@ icon: "/assets/img/house.svg"
 contents:
   - title: 肇庆学院 数据科学与大数据技术
     description:
-      - "电话: <span style='color: goldenrod; margin: auto 8px;'>155 8888 8888</span>"
-      - "邮箱: <a style='color: goldenrod; margin: auto 8px; text-decoration: none;' href='mailto:jiancai.zhong@email.cn'>jiancai.zhong@email.cn</a>"
-      - "地址: <span style='color: goldenrod; margin: auto 8px;'>广东省广州市</span>"
-      - "经验: <span style='color: goldenrod; margin: auto 8px;'>3 年</span>"
-    date: 2018.09 - 2022.06
+      - "电话: <span style='color: goldenrod; margin: auto 8px;'>155 2166 8113</span>"
+      - "邮箱: <a style='color: goldenrod; margin: auto 8px; text-decoration: none;' href='mailto:3296493602@qq.com'>3296493602@qq.com</a>"
+      - "地址: <span style='color: goldenrod; margin: auto 8px;'>广东省湛江市</span>"
+      - "经验: <span style='color: goldenrod; margin: auto 8px;'>2 年</span>"
+    date: 2019.09 - 2023.06
