--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ profile_img: /assets/img/avator.png
 icon_img: /assets/img/icon.jpg
 
 name: "苏大晟"
-job: "Java 研发⼯程师"
+job: "Java 开发⼯程师"
 
 baseurl: /resume/
 
